--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3>About Me</h3>
             <p>Hi, I’m Karan (also known as Ken), a passionate software engineer and the founder of ohiocodehunter. With a strong foundation in front-end web development, I specialize in creating responsive and visually engaging websites using technologies like HTML, CSS, JavaScript, Bootstrap, and Tailwind CSS. <br>
                 <br>
-                My portfolio showcases diverse projects, including e-commerce platforms, blockchain landing pages, to-do apps, and creative tools like photo resizers and file converters. You can explore my work at karan-och.netlify.app. <br>
+                My portfolio showcases diverse projects, including e-commerce platforms, blockchain landing pages, to-do apps, and creative tools like photo resizers and file converters. You can explore my work at My <a src="https://karan-och.netlify.app">Portfolio</a>. <br>
                 
                 Beyond coding, I’m actively learning English and Japanese, sharing insights through my YouTube channel, Ken San, and building a solo company to offer web development and maintenance services globally. <br>
                 
